fix collapsing margins
By defining body padding instead of child element margin

--- a/src/styles/_general.sass
+++ b/src/styles/_general.sass
@@ -2,7 +2,7 @@
 // font-family: 'Montserrat', sans-serif;
 // font-weight: 400, 700;
 
-*, ::after
+*, ::before,::after
   margin: 0
   padding: 0
   box-sizing: border-box
@@ -13,6 +13,7 @@ html
 
 body
   min-height: 100vh
+  padding: 5vh
   background: url(../assets/images/background/space-1280x720.png)
   background-size: cover
   background-repeat: no-repeat
@@ -22,13 +23,11 @@ body
   flex-direction: column
   align-items: center
   max-width: 1200px
-  margin: 2% auto
+  margin: 0 auto
   background-color: $sheer-black
-
 
 // BUTTONS 
 button
   cursor: pointer
   outline: none
   border: none
-
